<resources>
    <string name="app_name">ClubDeportivo_Grupo10</string>
    <string name="gift_image_description">Imagen de regalo</string>
    <string name="gym_image_description">Logo del gimnasio</string>
    <string name="card_image_description">Imagen de tarjeta</string>
    <string name="ball_image_description">Imagen de pelota</string>
    <string name="club_deportivo_grupo_10">Club Deportivo Grupo 10</string>
    <string name="accede_a_muchos_beneficios_de_nuestro_club">Accede a muchos beneficios de nuestro club</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="recordarme">Recordarme</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="ingrese_su_email">Ingrese su email</string>
    <string name="gestiona_tus_pagos_y_suscripciones">Gestiona tus pagos y suscripciones</string>
    <string name="visualiza_todas_tus_actividades">Visualiza todas tus actividades</string>
    <string name="ingrese_su_nombre_completo">Ingrese su nombre completo</string>
    <string name="n_de_telefono">N° de Telefono sin 0 ni 15</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="asociarme">Asociarme</string>
    <string name="contratar_actividad">Contratar actividad</string>
    <string name="asociate_hoy_al_club_deportivo">Asociate hoy al club deportivo</string>
    <string name="disfruta_beneficios">Y disfruta de todas las actividades y beneficios que tiene el club para vos a un solo precio!</string>
    <string name="_19_999">$ 19.999</string>
    <string name="final_por_mes">Final por mes</string>
    <string name="aceptar_t_rminos_y_condiciones">Aceptar términos y condiciones</string>
    <string name="ver">Ver</string>
    <string name="aceptar">Aceptar</string>
    <string name="download">Download</string>
    <string name="contrata_por_separado">Contrata por separado</string>
    <string name="y_ahorr_haciendo_las_actividades">Y ahorrá haciendo las actividades que más te gustan sin gastar de más</string>
    <string name="_5_499_c_u">$ 5.499 c/u</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="cambiar_clave">Cambiar clave</string>
    <string name="contacto">Contacto</string>
    <string name="pagar">Pagar</string>
    <string name="contratar">Contratar</string>
    <string name="t_rminos_y_condiciones">Términos y condiciones</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="correo">correo@example.com</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="pagos_realizados">Pagos realizados</string>
    <string name="credencial">Credencial</string>
    <string name="pagar_ahora">Pagar ahora</string>
    <string name="pendiente_de_pago">Pendiente de pago</string>
    <string name="description">Description</string>
    <string name="title">Title</string>

    <string-array name="actividades_array_contratar">
        <item>Seleccione actividad</item>
        <item>Futbol</item>
        <item>Tenis</item>
        <item>Yoga</item>
    </string-array>
</resources>