<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#03FCA1"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#03FCA1"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textTitulo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/black" />


            </LinearLayout>


            <TextView
                android:id="@+id/textDescripcion"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_por_mes"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#03FCA1"
                android:text="@string/cancelar"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>
